added templates notebook

--- a/biosamples_tissue.ipynb
+++ b/biosamples_tissue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-08T14:40:43.410429400Z",
@@ -10,7 +10,18 @@
     },
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
+      "\n",
+      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from owlready2 import *\n",
     "import pandas as pd\n",
@@ -79,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-08T13:43:12.573952700Z",
@@ -89,10 +100,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "crop tumor_size tisssue_type prostate_lobe brain_tumor presence_and_type_of_narrowings_rectum disease_colony_sample_distance body_compartment monocyte_subset fungi histology_of_cancer tumor_site neutrophils host_cell_type %_granulocytes breast_cancer_age cell_type_source gland_type organ healthy_liver gender_animal_site cancer_cell_line_composition sample_lymphocyte_percentage myocyte cell_type_of_origin coronalcaries muscle_source tumour_size__mm_ source_tissue body_site_common eosinophil_purity_percent liver_weight_[g] body_sample_site histological_grade characteristics:cancer_type_abbrevation brain_site_tissue absolute_macrophages fromtissue extent_of_ulcerated_surface_transverse_colon host_blood biopsy_location condition gut_mass tissue_layer fat_tissue_location collection_details presence_and_type_of_narrowings_right_colon brain_weight biomaterial_name skin_type degree_of_fibrosis eosinophils_per_high_powered_field tissue_sample degree_of_dysplasia description___site disease_location fruit_phenotype condition_of_thoracic_aorta host_tissue_samples bone_marrow_blasts age_at_blood_collection cell_typing dna_source extent_of_ulcerated_surface_ileum bio_sample tissue_cell_subtype body_location fallopian_tube_region sample_tiss colon constipation_severity lesion.size bronchial_scaffold_type prostatic_lobe host_tissue cell_id tissue_of_origin_for_tumor ulcer_depth_centimeters bodysite cell_line_tissue organ_part monocyte blood_subcomponent biomaterial_type anal_cytology lymphocytes_in_lamina_propria age_at_skin_biopsy primary_tissue ulcer_location blood_platelets tumor_size__mm_ derived_cell_type tissue_cells atcc_culture_collection_identifier atrial_tissue_region botanical_anatomy gut_compartment tissue__type constipation_re_diagnosis tumor_weight mouse_tissue body_site_abbreviation cell_line_source diseaselocation body_site_corrected primary_tumour_location cells_type xenograft_tissue tissue_rego tissue_compartment engrafted_tumor_collection_site degree_of_fibrosis_chc_at_the_end_of_follow_up tissue_type_source ileal_invovlement fruit_frequency cell_tytpe gbm_grade monocyte_percent sample_type_body_site tumour_size bone_marrow_grafting_type %_monocytes fruit_shape lymphocytes bodyproduct body_sites bodypart age_feces hepatic_fat_fraction body_product env_material tumorsize %_b_cells cell_line_origin cancer_tissue_source histopathological_grade brain_metastasis root_compartment vascular_origin tissue_thickness cellsubset ph_vaginal hippocampal_subregion brain_structure cst_dendrogram_introitus_cervix anatomy body_system genitalia_number endometrial_cell_type_compartment cell_type_used_for_xenograft source_organ anatomic_segment cell_compartment deep_ulcer germ_layer breast_cancer breast_cancer_model endocrine_cell_type tissue_of_origin tumor_size_by_pet_or_ct_cm growth_source celll_type cancer_type_abbrevation characteristics_[cell_type histology_type histology_grade tissue___cells disease_cell_type colonic_transit breast_cancer_subtypes gbm_cell_population derived_from_hesc_or_ipsc organ_parts___0 tissue_cell_type anatomical_position dissected_region colorectal_cancer_stadium cell_source_and_growth simple_body_site gi_location >_5%_tumor_cellularity extent_of_affected_surface_left_colon afected_area body_site_orig extent_of_ulcerated_surface_right_colon colonoscopy_surgery_timing cell_tissue_subtype eosinophil_percent tissue_subtype_brodmann_area clinicalinformation:specimen_type organ_name condition_type fruit_color brain_hemisphere body_fluid cancer_type brain cell_state_source collection_site eosinphil_pct animal_source_specific type_of_liver_tissue percentage_lymphocytes disease_site bowel atcc_id tissue_or_cell_type organ_of_origin cervical_immune_cell_subsets_numberofcd4positivealpha4beta7positive cell_type tissue_group anatomical_location breast_tumor_subtype tissues colontumor high_risk_adenoma muscle_type colon_segment_involved germline presence_and_size_of_ulcers_ses_cd_ileum anatomic_site_ developmental_tissue tissue_site cancer_site gut_location bio_sample_2 tissus presence_and_type_of_narrowings_ileum bal_neutrophil_percent cell_class skin_site cell_line source_tissue_cell_type %_t_cells tissue tissue_subset anatomical_part collection_site_and_cell_type host_tissue_sample cell_typle ulcers_age animal_source tissue_subype tumor_diameter extent_of_ulcerated_surface_left_colon gutchamber lesion.mm body_site cell_line_sournce biopsy_source 3rd_leaf_width presence_and_type_of_narrowings_left_colon glands site_of_biopsy_ii anatomical_sites breast_cancer_type bodysites cell_type_or_stage her2_prediction_sgc rhizocompartment organ_tissue gliomas_classification collection_information gastriculcer brain_ph fruit_status thyroid affected_area absolute_lymphocytes tisssue brain_code skin_sample cell_types tissue_type %_nk_cells cell_type_isolated copy_num_per_gram_feces intestine hes_cell_type host_tissue_sampled gutsampleid organ_site differentiated_cell_type brain_number root site_of_extraction genital_hsv multiple_torso_limb_sites extraction_site colorbreast 3rd_leaf_length_cm 3rd_weigh_date_lbs blood_monocyte_percentage complex_fungi deep_dyspareunia_category platelet_count bodyhabitat gut_locations tissu femur tooth tissue_cell_type_source tonsils collection_site_name cell host_tissue_subsection organ_parts___1 patient_tumor_site_of_collection biologicalsample histology::type cell_source biological_material fungi_head advanced_adenoma biosample_tag cell_of_origin_subtype cellsubtype bio_material confluent_necrosis tissue_type_details tooth_sampled hek293t_genotype skintype source_of_tissue cancer_origin_type brain_tissue sample_type_skin_type biopsy_site body_habitat cell_type_background derived_cell_typed cellular_component tisse histological_type fruit extent_of_ulcerated_surface_rectum fungal_cell_type intestinal_region fungal_stage monocytes condition_desc biopsy_grade original_tissue derived_material cell_tissue_type bacteria_tissue lymphocyte atcc_cell_line_source derived_tissue primary_tumor_tissue fetal_region prostatic_zone %_brain presence_and_size_of_ulcers_ses_cd_rectum fruit_stage condition_description gut_section histopathological_type monocyte_pct coronary_artery_disease_status neutrophil cell_typr blood_collection_date commercial_cell_line her_status basophils primary_tumor_site tissuetype histologic_type bone_marrow_grafting_status organ_parts tissue_subtype presence_and_size_of_ulcers_ses_cd_left_colon collection_sites vaginal_wall_ph germinal_zone brain_region cell_or_tumor_type tiisue anatomical_material cell_tissue bone_marrow_transplant_timestamp heart gut_chamber plant_body_site platelets absolute_neutrophils fungus intestinal_segment constipation_duration sample_tissue_type site_of_biopsy_i gut b_cell_subset genotype_tissue prostate_cancer gbm_subtype tumour_site control_tissue skin_region eosinphl_pct cell_description fruits_or_vegetables tissue_section cell_type_origin host_body_site tissue_location bone_marrow_status cell_of_origin tissue_samples tissue_sampling tissue_region extent_of_affected_surface_transverse_colon cellular_source gingivitis extent_of_affected_surface_rectum human_cell_type cell_line_background colon_location necrotic_tissue extent_of_affected_surface_ileum type_of_tissue brainhemisphere gall_bladder sample_tissue tumor__origin brainbank biomaterialtype tissue_soure anatomical_site body_site_type genotype_cell_type lung_section_portion rbc high_stool red_blood_cell_count__x10^12_l_ glial_cluster degree_of_aortic_valve_disease lymphocyte_percent presence_and_size_of_ulcers_ses_cd_right_colon b_cells specific_tissue confirmed_metastasis b_cell_stage cell_classification cell_line_or_tissue eosinophils histology::subtype gut_segment_type %_blood breast_cancer_subtype anatomic_location origin_tissue cancersitecoarse hesc_line cells_subtype gi_sample fruit_thinning tisue brain_area tiissue anatomical_localisation bio_sample_1 embryo_source clinicalinformation:white_blood_cell_count_at_diagnosis %_tumour_cell_content derived_strain hepaticfatfraction orginal_tissue anatomic_site collection_site_or_growth_conditions region_of_tissue gonadal_status heart_chambers growth_phase_cell_type fruit_acidity breast_tumor_model frozen_tissue endometrial_cancer_type gonad_weight harvested_leaf__leaf_number_on_main_shoot_ background_cell_line cell_type_isolation celll_subtype tissue_types tissure tissue_side histological_tumor_classification cell_type_tissue deep_dyspareunia_score cancer breast_bright cellular_fraction blood_source 3rd_leaf_width_cm her2_prediction_mgc body_sample_subsite brain_id cancersite eosinophil endothelial_cells histological_subtype_primary_tumor collection_description crohns_disease characteristics:_tissue erythrocytes isolate_tissue_sampled ileum body_part celltype platelet vaginal_ph biopsy_tissue terminal_ileum basophil cells_derived_from bone co_cultured_cell_type graft_type cell_id_assigned basophil_percent brain_section bal_lymphocyte_percent derived_source bodylocation neutrophil_percent tumor_cell_type biomaterial helper_t_cells 3rd_leaf_length tssue tisue_type b_cell_type cell_line_tissue_source tissue_origin hepatic_zone batch_of_transduced_liver_cells cellular_compartment cell_line_type bone_marrow_blast_count cell_or_tissue_type colon_status hippocampal_subfield gbm_classification celltype_identifier brain_sub_region_tissue organ_or_cell_type extent_of_affected_surface_right_colon\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# load the list of annotated body_site terms\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m body_site_terms \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39mdata/BioAnnotate_rh-body_site.csv\u001b[39m\u001b[39m\"\u001b[39m, header\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m body_site_terms \u001b[39m=\u001b[39m body_site_terms[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mtolist()\n\u001b[1;32m      4\u001b[0m body_site_terms \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(body_site_terms)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
@@ -103,7 +118,7 @@
     "body_site_terms = set(body_site_terms)\n",
     "body_site_string = \" \".join(body_site_terms)\n",
     "# print(\"sample_tissue_type\" in body_site_terms)\n",
-    "print(body_site_string)"
+    "# print(body_site_string)"
    ]
   },
   {
