added to the templates and tissue notebooks

--- a/biosamples_tissue.ipynb
+++ b/biosamples_tissue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-08T14:40:43.410429400Z",
@@ -21,8 +21,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "# Loading data...\n",
+    "\n",
+    "- loads the BRENDA ontology OWL file\n",
+    "    - loads the properties, classes and synonyms from BRENDA\n",
+    "    - classes information split into names and labels\n",
+    "    - properties split into annotation/object and also names and labels\n",
+    "- loads the body_site_terms from a csv of manually collated terms"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-08T13:00:06.860390300Z",
@@ -40,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-08T13:00:06.928611300Z",
@@ -64,12 +79,11 @@
     "class_names = [c.name for c in onto.classes()]\n",
     "# account for missing class labels in the ontology\n",
     "class_labels = [c.label[0] if len(c.label) > 0 else '' for c in onto.classes()]\n",
-    "class_synonyms = {c.name: c.hasExactSynonym + c.hasRelatedSynonym + c for c in onto.classes()}\n",
+    "class_synonyms = {c.name: c.hasExactSynonym + c.hasRelatedSynonym for c in onto.classes()}\n",
     "\n",
     "num_synonyms = 0\n",
     "\n",
     "for class_label in onto.classes():\n",
-    "    # print(class_label.hasRelatedSynonym)\n",
     "    num_synonyms += len(class_label.hasRelatedSynonym) + len(class_label.hasExactSynonym)\n",
     "\n",
     "print(\"Num synonyms: \", num_synonyms)\n",
@@ -90,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-08T13:43:12.573952700Z",
@@ -98,19 +112,7 @@
     },
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# load the list of annotated body_site terms\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m body_site_terms \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39mdata/BioAnnotate_rh-body_site.csv\u001b[39m\u001b[39m\"\u001b[39m, header\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m body_site_terms \u001b[39m=\u001b[39m body_site_terms[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mtolist()\n\u001b[1;32m      4\u001b[0m body_site_terms \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(body_site_terms)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load the list of annotated body_site terms\n",
     "body_site_terms = pd.read_csv(\"data/BioAnnotate_rh-body_site.csv\", header=None)\n",
@@ -119,6 +121,24 @@
     "body_site_string = \" \".join(body_site_terms)\n",
     "# print(\"sample_tissue_type\" in body_site_terms)\n",
     "# print(body_site_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---- \n",
+    "# Parsing the Biosamples files\n",
+    "- BioSamplesDictHandler looks at all the attributes for each biosample\n",
+    "    - uses a fuzzy search to find the attribute that has the highest similarity to the attribute names in the body_site_terms"
    ]
   },
   {
@@ -212,81 +232,6 @@
     "\n",
     "# token sort ratio\n",
     "# 3121"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.2330508474576276\n",
-      "0.42332521959995706\n",
-      "('sample_type_body_site', 90.0, 126)\n",
-      "('biomaterial', 90.0, 147)\n",
-      "time: 0.0010864734649658203\n",
-      "0.2330508474576276\n",
-      "0.42332521959995706\n",
-      "time: 0.00012373924255371094\n"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "\n",
-    "# a = \"biomaterial provider\"\n",
-    "a = body_site_string\n",
-    "b = 'sample_type'\n",
-    "c = 'biomaterial_provider'\n",
-    "\n",
-    "print(rapidfuzz.fuzz.ratio(a, b))\n",
-    "# print(rapidfuzz.fuzz.partial_ratio(a, b))\n",
-    "# print(rapidfuzz.fuzz.token_sort_ratio(a, b))\n",
-    "# print(rapidfuzz.fuzz.token_set_ratio(a, b))\n",
-    "# print(rapidfuzz.fuzz.WRatio(a, b))\n",
-    "# print(rapidfuzz.fuzz.QRatio(a, b))\n",
-    "# print(rapidfuzz.distance.DamerauLevenshtein.distance(a, b))\n",
-    "# print(\"-----\")\n",
-    "print(rapidfuzz.fuzz.ratio(a, c))\n",
-    "# print(rapidfuzz.fuzz.partial_ratio(a, c))\n",
-    "# print(rapidfuzz.fuzz.token_sort_ratio(a, c))\n",
-    "# print(rapidfuzz.fuzz.token_set_ratio(a, c))\n",
-    "# print(rapidfuzz.fuzz.WRatio(a, c))\n",
-    "# print(rapidfuzz.fuzz.QRatio(a, c))\n",
-    "# print(rapidfuzz.distance.DamerauLevenshtein.distance(a, c))\n",
-    "\n",
-    "s = time.time()\n",
-    "print(rapidfuzz.process.extractOne(b, body_site_terms))\n",
-    "print(rapidfuzz.process.extractOne(c, body_site_terms))\n",
-    "e = time.time()\n",
-    "print(\"time: %s\" % (e-s))\n",
-    "\n",
-    "s = time.time()\n",
-    "print(rapidfuzz.fuzz.ratio(b, body_site_string))\n",
-    "print(rapidfuzz.fuzz.ratio(c, body_site_string))\n",
-    "e = time.time()\n",
-    "print(\"time: %s\" % (e-s))\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# To do \n",
-    "- 1000 random\n",
-    "- 1000 cervix serach\n",
-    "\n",
-    "- collection date\n",
-    "- publish date\n",
-    "\n",
-    "look at elastic search, sonic, typesense"
    ]
   }
  ],
