--- a/biosamples_templates.ipynb
+++ b/biosamples_templates.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
+      "\n",
+      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import csv\n",
@@ -36,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +129,7 @@
    "outputs": [],
    "source": [
     "# reads the packages names from the xml file and fetches the xml files for each package\n",
+    "# NO NEED TO RERUN THIS CELL\n",
     "for package in packages_list:\n",
     "    response = requests.get(\"https://www.ncbi.nlm.nih.gov/biosample/docs/packages/\" + package + \"/?format=xml\")    \n",
     "    if response.status_code == 200:\n",
@@ -130,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +223,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Finding useful packages\n",
+    "- possible_tissue set stores attribute names that could store the tissue location for the biosample\n",
+    "- finds all packages that have any attribute in the list as a required attribute\n",
+    "- DOESN'T YET LOOK AT THE REQUIRED GROUP PACKAGES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "possible_tissue = {\"cell_line\", \"cell_subtype\", \"cell_type\", \"host_tissue_sampled\", \"sample_type\", \"tissue\", \"host_anatomical_part\", \"isolation_source\", \"source_name\", \"source_type\", \"strain\", \"subclone\", \"subgroup\"}\n",
+    "\n",
+    "useful_packages = []\n",
+    "\n",
+    "print(len(possible_tissue))\n",
+    "\n",
+    "for package in attributes_dict:\n",
+    "    attributes = attributes_dict[package]\n",
+    "    if len(attributes) == 0:\n",
+    "        continue\n",
+    "    else:\n",
+    "        # print(attributes)\n",
+    "        required = set(a for a in attributes if type(a) == str)\n",
+    "        if len(required.intersection(possible_tissue)) > 0:\n",
+    "            useful_packages.append(package)\n",
+    "\n",
+    "\n",
+    "\n",
+    "with open(\"data/biosamples/useful_packages.txt\", 'w') as f:\n",
+    "    for package in useful_packages:\n",
+    "        f.write(package + \"\\n\")\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "## Confirming biosamples XML format\n",
     "- every biosample identified by a \\<BioSample> tag\n",
@@ -220,8 +281,6 @@
     "    - an \\<Organism> tag (data stored in the attributes of the tag) that identifies the taxonomy related to the sample\n",
     "    - an \\<Ids> tag that contains information of the sample\n",
     "        - each \\<Id> tag has information about where the specific sample came from\n",
-    "- there should be 16141032 counts db_label=\"Sample name\" in the file\n",
-    "    - dbGaP database comes from NCBI\n",
     "- each biosamples should also have owner and access information\n",
     "    - access infromation is in the attributes of the \\<BioSample> tag\n",
     "    - owner information is in the owner tag"
@@ -296,7 +355,8 @@
    "source": [
     "## \\<Ids> tags format\n",
     "- each \\<Id> tag between the \\<Ids> tags relates to a single database that the data comes from \n",
-    "    - every \\<Ids> tag should have at least one \\<Id> tag??\n"
+    "    - every \\<Ids> tag should have at least one \\<Id> tag??\n",
+    "- there should be 16141032 counts db_label=\"Sample name\" in the file"
    ]
   },
   {
@@ -343,62 +403,6 @@
     "parser = xml.sax.make_parser()\n",
     "parser.setContentHandler(BioSampleIdsHandler())\n",
     "parser.parse(bio_path)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Synonyms from the BTO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num classes:  6569\n",
-      "Num synonyms:  6210\n"
-     ]
-    }
-   ],
-   "source": [
-    "onto_path.append(\"data/ontologies/\")\n",
-    "onto = get_ontology(\"http://purl.obolibrary.org/obo/bto.owl\").load()\n",
-    "\n",
-    "class_labels = [c.label[0] if len(c.label) > 0 else '' for c in onto.classes()]\n",
-    "# classes = list(c.label[0] for c in onto.classes())\n",
-    "# print(class_labels)\n",
-    "print(\"Num classes: \", len(class_labels))\n",
-    "\n",
-    "num_synonyms = 0\n",
-    "\n",
-    "for class_label in onto.classes():\n",
-    "    # print(class_label.hasRelatedSynonym)\n",
-    "    num_synonyms += len(class_label.hasRelatedSynonym) + len(class_label.hasExactSynonym)\n",
-    "\n",
-    "print(\"Num synonyms: \", num_synonyms)\n",
-    "\n",
-    "# direct search for terms in the onotology\n",
-    "# print(onto.search(label=\"*lea*\"))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Things to search for in biosamples XML:\n",
-    "\n",
-    "    </BioSample>\n",
-    "    <Organism \n",
-    "    <Package \n",
-    "    <Title \n"
    ]
   },
   {
@@ -524,7 +528,7 @@
     "                num_written_samples += 1\n",
     "            write_random_sample = False\n",
     "            biosample_count += 1\n",
-    "            if biosample_count % 500000 == 0:\n",
+    "            if biosample_count % 1000000 == 0:\n",
     "                print(\"Number of biosamples read: \", biosample_count)\n",
     "            continue\n",
     "\n",
@@ -539,17 +543,64 @@
     "    biosample_random_samples.write(\"</BioSampleSet>\")\n",
     "    biosample_random_samples.close()\n",
     "\n",
-    "           \n",
-    "\n",
     "print(\"Number of biosamples read: \", biosample_count)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Synonyms from the BTO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num classes:  6569\n",
+      "Num synonyms:  6210\n"
+     ]
+    }
+   ],
+   "source": [
+    "onto_path.append(\"data/ontologies/\")\n",
+    "onto = get_ontology(\"http://purl.obolibrary.org/obo/bto.owl\").load()\n",
+    "\n",
+    "class_labels = [c.label[0] if len(c.label) > 0 else '' for c in onto.classes()]\n",
+    "# classes = list(c.label[0] for c in onto.classes())\n",
+    "# print(class_labels)\n",
+    "print(\"Num classes: \", len(class_labels))\n",
+    "\n",
+    "num_synonyms = 0\n",
+    "\n",
+    "for class_label in onto.classes():\n",
+    "    # print(class_label.hasRelatedSynonym)\n",
+    "    num_synonyms += len(class_label.hasRelatedSynonym) + len(class_label.hasExactSynonym)\n",
+    "\n",
+    "print(\"Num synonyms: \", num_synonyms)\n",
+    "\n",
+    "# direct search for terms in the onotology\n",
+    "# print(onto.search(label=\"*lea*\"))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Things to search for in biosamples XML:\n",
+    "\n",
+    "    </BioSample>\n",
+    "    <Organism \n",
+    "    <Package \n",
+    "    <Title \n"
+   ]
   }
  ],
  "metadata": {
