--- a/biosamples_templates.ipynb
+++ b/biosamples_templates.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
-      "\n",
-      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import csv\n",
@@ -197,6 +186,8 @@
     "                self.group_name = None\n",
     "            \n",
     "            self.is_mandatory_attribute = False\n",
+    "\n",
+    "            \n",
     "            self.is_harmonized_name = False\n",
     "\n",
     "    def endDocument(self):\n",
@@ -272,8 +263,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "## Confirming biosamples XML format\n",
+    "----\n",
+    "# Confirming biosamples XML format\n",
     "- every biosample identified by a \\<BioSample> tag\n",
     "- each biosample also has:\n",
     "    - a \\<Package> tag that has identifies the package for that sample\n",
@@ -346,6 +337,55 @@
     "print(\"Number of package tags: \", package_count)\n",
     "print(\"Number of ids tags: \", id_count)\n",
     "print(\"Number of title tags: \", title_count)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Counting the number of samples with the Generic.1.0 package\n",
+    "- samples with the Generic.1.0 package have no set format in the xml\n",
+    "    - may have any attributes so must look through all attributes to find right info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of generic packages:  20028462\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BioSamplesGenericHandler(xml.sax.ContentHandler):\n",
+    "    def __init__(self) -> None:\n",
+    "        super().__init__()\n",
+    "        self.is_package = False\n",
+    "        self.generic_count = 0\n",
+    "\n",
+    "    def startElement(self, name, attrs):\n",
+    "        if name == \"Package\":\n",
+    "            self.is_package = True\n",
+    "\n",
+    "    def characters(self, content):\n",
+    "        if self.is_package:\n",
+    "            if content == 'Generic.1.0':\n",
+    "                self.generic_count += 1\n",
+    "            self.is_package = False\n",
+    "    \n",
+    "    def endDocument(self):\n",
+    "        print(\"Number of generic packages: \", self.generic_count)\n",
+    "\n",
+    "\n",
+    "parser = xml.sax.make_parser()\n",
+    "parser.setContentHandler(BioSamplesGenericHandler())\n",
+    "parser.parse(\"data/biosamples/biosample_set.xml\")\n"
    ]
   },
   {
